# invoicer

.github/workflows/: build-image.yml
api/: .gitignore  Dockerfile  Makefile  README.md  invoicer.db  old.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  test_requests.txt
api/.github/: build-image.yml
api/src/invoicer_api/: app.py
api/src/invoicer_api/config/: config.py
api/src/invoicer_api/model/: invoice.py  template.py
api/src/invoicer_api/static/: style.css
api/src/invoicer_api/templates/: base.html  login.html  root.html  template.html  templates.html
db/: commands.sql  install.sh
infra/: README.md  ansible-setup.yaml  hosts  invoicer.yaml  setup.sh
infra/roles/base_user/tasks/: main.yml
infra/roles/docker/handlers/: main.yml
infra/roles/docker/tasks/: main.yml
infra/roles/nginx/files/: invoicer.conf
infra/roles/nginx/tasks/: main.yml
infra/roles/sqlite/files/: bootstrap.sql
infra/roles/sqlite/tasks/: main.yml
